# wasymex

./: .gitignore  Cargo.toml  README.md
demos/demo1/: build.sh  code.c  code.wasm
demos/demo2/: build.sh  div.wasm  div.zig
demos/demo3/: build.sh  challenge.ts  crack.ts  crack.wasm  crack.wat
src/: check.rs  context.rs  engine.rs  flow.rs  lib.rs  main.rs  memory.rs  reporter.rs  state.rs  value.rs
src/checks/: div.rs  memory.rs  mod.rs
test/: block.wasm  block.wat  call.wasm  call.wat  div.wasm  div.wat  if.wasm  if.wat  loops.wasm  loops.wat  memory.wasm  memory.wat  simple.wasm  simple.wat
test/assemblyscript/: checksum.ts  checksum.wasm  checksum.wat
test/c/: a.out.js  a.out.wasm  test.c  test.ll  test.s  test.wasm
