[package]
name = "wasymex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.4", features = ["derive"] }
colored = "2.0.0"
dyn-clone = "1.0.11"
fern = { version = "0.6.2", features = ["colored"] }
log = "0.4.17"
simplelog = { version = "0.12.1", features = ["paris"] }
walrus = "0.19.0"
z3 = "0.11.2"
